<resources>
    <string name="app_name">gty-android</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="init">Inicio</string>
    <string name="home">Inicio</string>
    <string name="favorites">Favoritos</string>
    <string name="profile">Perfil</string>

    <string name="login">Iniciar Sesión</string>
    <string name="register">Registro</string>

    <string name="already_account">¿Ya tienes una cuenta?</string>
    <string name="dont_have_account">¿No tienes una cuenta?</string>

    <string name="fullname">Nombre Completo</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password_confirmation">Contraseña Nuevamente</string>

    <string name="search">Buscar</string>
    <string name="booking">Reserva</string>

    <string name="logout">Cerrar Sesión</string>

</resources>